--- a/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" image="MDPin" id="CKf-zJ-0vq">
                             <connections>
-                                <segue destination="0nf-LG-OEF" kind="show" id="61U-Aw-AmT"/>
+                                <segue destination="2Pq-Pv-8f2" kind="show" id="ToE-tC-VWm"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -89,10 +89,10 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="On The Map" id="VSU-us-7eh">
-                        <barButtonItem key="leftBarButtonItem" title="Log Out" id="PBC-Jb-ZiC"/>
+                        <barButtonItem key="leftBarButtonItem" title="Log Out" id="kQO-f8-Bzz"/>
                         <barButtonItem key="rightBarButtonItem" image="MDPin" id="Opm-LI-kan">
                             <connections>
-                                <segue destination="0nf-LG-OEF" kind="show" id="RSx-dQ-yfF"/>
+                                <segue destination="2Pq-Pv-8f2" kind="show" id="lbj-7g-qqT"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -213,18 +213,6 @@
                                     <action selector="submitButton:" destination="0nf-LG-OEF" eventType="touchUpInside" id="dIN-jd-JmR"/>
                                 </connections>
                             </button>
-                            <navigationBar contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bLN-0F-gLB">
-                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
-                                <items>
-                                    <navigationItem title="On The Map" id="zZA-Lf-z0P">
-                                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="Md2-7o-Ohe">
-                                            <connections>
-                                                <action selector="cancelButtonAction:" destination="0nf-LG-OEF" id="h0O-4D-Lr3"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <view alpha="0.59999999999999998" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jBZ-uR-44e">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
@@ -241,8 +229,6 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="bLN-0F-gLB" firstAttribute="leading" secondItem="dZf-47-0fy" secondAttribute="leading" id="4fC-Mc-M5H"/>
-                            <constraint firstItem="bLN-0F-gLB" firstAttribute="trailing" secondItem="dZf-47-0fy" secondAttribute="trailing" id="5rf-fM-ZKU"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dZf-47-0fy" secondAttribute="trailing" constant="-20" id="9jx-JS-OKn"/>
                             <constraint firstItem="naa-uf-Zfp" firstAttribute="baseline" secondItem="H8a-ue-Mmk" secondAttribute="baseline" id="AQ7-mA-8Uo"/>
                             <constraint firstItem="tcY-Eh-Jkf" firstAttribute="trailing" secondItem="E51-gC-abb" secondAttribute="trailing" id="ESR-4g-A8k"/>
@@ -261,15 +247,20 @@
                             <constraint firstItem="dZf-47-0fy" firstAttribute="top" secondItem="n61-BZ-cJm" secondAttribute="topMargin" constant="80" id="kGb-i9-a31"/>
                             <constraint firstItem="jBZ-uR-44e" firstAttribute="bottom" secondItem="kNb-P4-YwK" secondAttribute="bottom" id="lk5-b4-iXv"/>
                             <constraint firstItem="H8a-ue-Mmk" firstAttribute="centerX" secondItem="tcY-Eh-Jkf" secondAttribute="centerX" id="mXH-JR-4g9"/>
-                            <constraint firstItem="bLN-0F-gLB" firstAttribute="top" secondItem="Edn-hg-vds" secondAttribute="bottom" id="nhP-ls-8eu"/>
                             <constraint firstItem="jBZ-uR-44e" firstAttribute="top" secondItem="n61-BZ-cJm" secondAttribute="top" id="rIK-Ti-v6n"/>
                             <constraint firstItem="naa-uf-Zfp" firstAttribute="leading" secondItem="H8a-ue-Mmk" secondAttribute="leading" id="vn8-JD-gAJ"/>
                             <constraint firstItem="naa-uf-Zfp" firstAttribute="centerX" secondItem="kNb-P4-YwK" secondAttribute="centerX" id="yz9-oM-rDU"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="omj-AF-SRG">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="HHA-ZX-hUP">
+                            <connections>
+                                <action selector="cancelButtonAction:" destination="0nf-LG-OEF" id="dju-cA-PGe"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="activityOutlet" destination="N3k-5U-YU0" id="T5m-hQ-PS6"/>
-                        <outlet property="cancelButtonOutlet" destination="Md2-7o-Ohe" id="cah-LG-9cp"/>
                         <outlet property="dimOutlet" destination="jBZ-uR-44e" id="EVH-Vz-2j0"/>
                         <outlet property="findOnTheMap" destination="E51-gC-abb" id="dbR-7X-Um0"/>
                         <outlet property="myMediaUrl" destination="naa-uf-Zfp" id="2PL-ai-gcg"/>
@@ -281,7 +272,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G5a-jq-z3O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2160" y="0.0"/>
+            <point key="canvasLocation" x="2972" y="0.0"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="CpS-7C-D9Y">
@@ -407,7 +398,6 @@
         <!--Navigation Controller-->
         <scene sceneID="vBE-Zc-2tq">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ZzI-LY-xtQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KlK-tV-Uoi" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="" image="listIcon" id="otg-8b-rxU"/>
                     <toolbarItems/>
@@ -420,6 +410,7 @@
                         <segue destination="cZd-HX-D2Q" kind="relationship" relationship="rootViewController" id="EGn-5L-SdM"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZzI-LY-xtQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="750" y="387"/>
         </scene>
@@ -442,6 +433,24 @@
             </objects>
             <point key="canvasLocation" x="750" y="-320"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="YaH-Gi-ytj">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2Pq-Pv-8f2" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="if8-T8-9b2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="0nf-LG-OEF" kind="relationship" relationship="rootViewController" id="TTK-6X-PCx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NDE-Ef-7cA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2160" y="0.0"/>
+        </scene>
     </scenes>
     <resources>
         <image name="MDPin" width="24" height="24"/>
@@ -452,6 +461,6 @@
         <image name="regMDPin" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="RSx-dQ-yfF"/>
+        <segue reference="lbj-7g-qqT"/>
     </inferredMetricsTieBreakers>
 </document>
